# kymavoid

./: .gitignore
GAZEBO/: README
GAZEBO/scan_tf/: CMakeLists.txt  package.xml
Vision_UI/js/: Rosservice.js
fira_launch/default_config/: AvoidChallenge (default).yaml  AvoidChallenge.yaml
fira_launch/launch/: AvoidChallenge.launch  laser_avoid.launch  multiple_4.launch  razer_avoid.launch  simulator.launch  test_motion.launch
param_convey/src/: strategy_param_server.cpp
strategy/: CMakeLists.txt
strategy/FIRA_strategy/: FIRA_pathplan(original edit).cpp  FIRA_pathplan.cpp  FIRA_pathplan.h  strategy.cpp  strategy_nodeHandle.cpp  strategy_nodeHandle.h
strategy/FIRA_strategy_old/: CMakeLists.txt  FIRA_behavior.cpp  FIRA_behavior.h  FIRA_pathplan(original edit).cpp  FIRA_pathplan.cpp
strategy/FIRA_teamStrategy/: FIRA_teamStrategy.cpp  main.cpp  teamStrategy_nodeHandle.cpp  teamStrategy_nodeHandle.h
strategy/common/: Env.h
strategy/msg/: strategylook.msg
vision/: CMakeLists.txt
vision/avoidance/: CMakeLists.txt  avoidance.cpp  avoidance.h  main.cpp  nodehandle.cpp  nodehandle.h
vision/blackItem/: CMakeLists.txt  blackItem.cpp  image_converter.cpp  image_converter.hpp
vision/black_item/: CMakeLists.txt  black_item.cpp  black_item.h  main.cpp  nodehandle.cpp  nodehandle.h
vision/black_item/Untitled Folder/: image_converter.cpp
vision/laser/: CMakeLists.txt  laser.cpp  laser.h  main.cpp  nodehandle.cpp  nodehandle.h
vision/razer/: CMakeLists.txt  main.cpp  nodehandle.cpp  nodehandle.h  razer.cpp  razer.h
新避障/: AvoidanceChallenge.html
(+44 files in other folders)
